--- a/i18n/fa.po
+++ b/i18n/fa.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 12.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-01-10 18:42+0000\n"
-"PO-Revision-Date: 2020-01-10 18:42+0000\n"
+"POT-Creation-Date: 2020-01-14 09:46+0000\n"
+"PO-Revision-Date: 2020-01-14 09:46+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -36,9 +36,16 @@ msgid "50"
 msgstr "۵۰"
 
 #. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_check__message_needaction
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__message_needaction
+msgid "Action Needed"
+msgstr "نیازمند اقدام"
+
+#. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_check__amount
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__amount
 msgid "Amount"
-msgstr "مقدار"
+msgstr "مبلغ"
 
 #. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_check__amount_text
@@ -48,7 +55,13 @@ msgstr "مبلغ به حروف"
 #. module: treasury
 #: model_terms:ir.ui.view,arch_db:treasury.treasury_checkbook_view_form
 msgid "Are you sure you want to do this?"
-msgstr ""
+msgstr "آیا از انجام این کار مطمئنید؟"
+
+#. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_check__message_attachment_count
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__message_attachment_count
+msgid "Attachment Count"
+msgstr "تعداد پیوست"
 
 #. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_checkbook__bank_account_id
@@ -61,18 +74,26 @@ msgid "Beneficiary"
 msgstr "ذینفع"
 
 #. module: treasury
+#: selection:treasury.incoming,type:0
+msgid "Bond"
+msgstr "اوراق قرضه"
+
+#. module: treasury
 #: selection:treasury.check,state:0
+#: selection:treasury.incoming,state:0
 msgid "Bounced"
 msgstr "برگشت‌خورده"
 
 #. module: treasury
 #: selection:treasury.check,state:0
+#: selection:treasury.incoming,state:0
 msgid "Canceled"
 msgstr "باطل‌شده"
 
 #. module: treasury
 #: model:ir.actions.report,name:treasury.action_print_check
 #: model:ir.model.fields,field_description:treasury.field_treasury_checkbook__check_ids
+#: selection:treasury.incoming,type:0
 msgid "Check"
 msgstr "چک"
 
@@ -92,14 +113,20 @@ msgid "Cleaned"
 msgstr "تسویه‌شده"
 
 #. module: treasury
+#: selection:treasury.incoming,state:0
+msgid "Collected"
+msgstr "نقد شده"
+
+#. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_checkbook__count
 msgid "Count"
 msgstr "تعداد"
 
 #. module: treasury
 #: model_terms:ir.actions.act_window,help:treasury.treasury_check_action_view_tree
+#: model_terms:ir.actions.act_window,help:treasury.treasury_incoming_action_view_tree
 msgid "Create your first check!"
-msgstr ""
+msgstr "اولین چک خود را ایجاد کنید."
 
 #. module: treasury
 #: model_terms:ir.actions.act_window,help:treasury.treasury_checkbook_action_view_tree
@@ -109,12 +136,14 @@ msgstr "اولین دسته‌چک خود را ایجاد کنید."
 #. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_check__create_uid
 #: model:ir.model.fields,field_description:treasury.field_treasury_checkbook__create_uid
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__create_uid
 msgid "Created by"
 msgstr "ایجاد شده توسط"
 
 #. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_check__create_date
 #: model:ir.model.fields,field_description:treasury.field_treasury_checkbook__create_date
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__create_date
 msgid "Created on"
 msgstr "ایجاد شده در"
 
@@ -134,14 +163,26 @@ msgid "Delivered"
 msgstr "تحویل‌شده"
 
 #. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_check__date_delivery
+msgid "Delivery Date"
+msgstr "تاریخ تحویل"
+
+#. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_check__description
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__description
 msgid "Description"
-msgstr "توصیف"
+msgstr "توضیح"
 
 #. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_check__display_name
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__display_name
 msgid "Display Name"
 msgstr "نام نمایشی"
+
+#. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__name
+msgid "Domestic Number "
+msgstr "شماره داخلی"
 
 #. module: treasury
 #: selection:treasury.checkbook,state:0
@@ -154,7 +195,13 @@ msgid "Draft"
 msgstr "پیش‌نویس"
 
 #. module: treasury
+#: selection:treasury.incoming,due_state:0
+msgid "Due"
+msgstr "سررسید شده"
+
+#. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_check__date_due
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__due_date
 msgid "Due Date"
 msgstr "تاریخ سررسید"
 
@@ -162,6 +209,11 @@ msgstr "تاریخ سررسید"
 #: model:ir.model.fields,field_description:treasury.field_treasury_check__date_due_text
 msgid "Due Date Text"
 msgstr "تاریخ سررسید به حروف"
+
+#. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__due_state
+msgid "Due State"
+msgstr "وضعیت سررسید"
 
 #. module: treasury
 #: selection:treasury.checkbook,state:0
@@ -174,25 +226,74 @@ msgid "First Check Serial No."
 msgstr "شماره سریال اولین چک"
 
 #. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_check__message_follower_ids
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__message_follower_ids
+msgid "Followers"
+msgstr "دنبال‌کنندگان"
+
+#. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_check__message_channel_ids
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__message_channel_ids
+msgid "Followers (Channels)"
+msgstr "دنبال‌کنندگان (کانال‌ها)"
+
+#. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_check__message_partner_ids
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__message_partner_ids
+msgid "Followers (Partners)"
+msgstr "دنبال‌کنندگان (مخاطبین)"
+
+#. module: treasury
 #: selection:treasury.check,purpose:0
+#: selection:treasury.incoming,purpose:0
 msgid "Guaranty"
-msgstr ""
+msgstr "گارانتی"
 
 #. module: treasury
 #: model:ir.module.category,description:treasury.module_category_treasury
 msgid "Helps you handle your checks and bonds."
-msgstr "جهت مدیریت چک‌ها و اوراق بهادار به‌کار می‌رود. "
+msgstr "جهت مدیریت چک‌ها و اوراق بهادار به‌کار می‌رود."
 
 #. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_check__id
 #: model:ir.model.fields,field_description:treasury.field_treasury_checkbook__id
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__id
 msgid "ID"
 msgstr "شناسه"
+
+#. module: treasury
+#: model:ir.model.fields,help:treasury.field_treasury_check__message_unread
+#: model:ir.model.fields,help:treasury.field_treasury_incoming__message_unread
+msgid "If checked new messages require your attention."
+msgstr "اگر این گزینه را انتخاب کنید، پیام‌های جدید به توجه شما نیاز خواهند داشت."
+
+#. module: treasury
+#: model:ir.model.fields,help:treasury.field_treasury_check__message_needaction
+#: model:ir.model.fields,help:treasury.field_treasury_incoming__message_needaction
+msgid "If checked, new messages require your attention."
+msgstr "اگر این گزینه را انتخاب کنید، پیام‌های جدید به توجه شما نیاز خواهند داشت."
+
+#. module: treasury
+#: model:ir.model.fields,help:treasury.field_treasury_check__message_has_error
+#: model:ir.model.fields,help:treasury.field_treasury_incoming__message_has_error
+msgid "If checked, some messages have a delivery error."
+msgstr "اگر این گزینه علامت خورده باشد، تحویل برخی از پیام‌ها با خطا مواجه شده است."
+
+#. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_check__message_is_follower
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__message_is_follower
+msgid "Is Follower"
+msgstr "دنبال‌کننده است"
 
 #. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_check__date_issue
 msgid "Issue Date"
 msgstr "تاریخ صدور"
+
+#. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__issuer
+msgid "Issuer"
+msgstr "صادر‌کننده"
 
 #. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_checkbook__journal_id
@@ -202,20 +303,29 @@ msgstr " تفکیک سند"
 #. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_check____last_update
 #: model:ir.model.fields,field_description:treasury.field_treasury_checkbook____last_update
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming____last_update
 msgid "Last Modified on"
 msgstr "آخرین تغییر در"
 
 #. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_check__write_uid
 #: model:ir.model.fields,field_description:treasury.field_treasury_checkbook__write_uid
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__write_uid
 msgid "Last Updated by"
 msgstr "آخرین تغییر توسط"
 
 #. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_check__write_date
 #: model:ir.model.fields,field_description:treasury.field_treasury_checkbook__write_date
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__write_date
 msgid "Last Updated on"
 msgstr "آخرین به روز رسانی در"
+
+#. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_check__message_main_attachment_id
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__message_main_attachment_id
+msgid "Main Attachment"
+msgstr "پیوست اصلی"
 
 #. module: treasury
 #: model:res.groups,name:treasury.group_treasury_manager
@@ -223,19 +333,70 @@ msgid "Manager"
 msgstr "مدیر"
 
 #. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_check__message_has_error
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__message_has_error
+msgid "Message Delivery error"
+msgstr "خطا در تحویل پیام"
+
+#. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_check__message_ids
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__message_ids
+msgid "Messages"
+msgstr "پیام‌ها"
+
+#. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_checkbook__display_name
 msgid "Name"
 msgstr "نام"
 
 #. module: treasury
+#: code:addons/treasury/models/treasury_incoming.py:38
+#: code:addons/treasury/models/treasury_incoming.py:60
 #: selection:treasury.check,state:0
+#, python-format
 msgid "New"
 msgstr "جدید"
 
 #. module: treasury
 #: selection:treasury.check,purpose:0
+#: selection:treasury.incoming,purpose:0
 msgid "Normal"
 msgstr "عادی"
+
+#. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__number
+msgid "Number"
+msgstr "شماره"
+
+#. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_check__message_needaction_counter
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__message_needaction_counter
+msgid "Number of Actions"
+msgstr "تعداد اقدامات"
+
+#. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_check__message_has_error_counter
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__message_has_error_counter
+msgid "Number of error"
+msgstr "تعداد خطا"
+
+#. module: treasury
+#: model:ir.model.fields,help:treasury.field_treasury_check__message_needaction_counter
+#: model:ir.model.fields,help:treasury.field_treasury_incoming__message_needaction_counter
+msgid "Number of messages which requires an action"
+msgstr "تعداد پیام‌هایی که نیاز به اقدام دارند."
+
+#. module: treasury
+#: model:ir.model.fields,help:treasury.field_treasury_check__message_has_error_counter
+#: model:ir.model.fields,help:treasury.field_treasury_incoming__message_has_error_counter
+msgid "Number of messages with delivery error"
+msgstr "تعداد پیام‌ها با خطای تحویل"
+
+#. module: treasury
+#: model:ir.model.fields,help:treasury.field_treasury_check__message_unread_counter
+#: model:ir.model.fields,help:treasury.field_treasury_incoming__message_unread_counter
+msgid "Number of unread messages"
+msgstr "تعداد پیام‌های خوانده‌نشده"
 
 #. module: treasury
 #: selection:treasury.checkbook,state:0
@@ -248,14 +409,25 @@ msgid "Printed"
 msgstr "چاپ‌شده"
 
 #. module: treasury
+#: selection:treasury.incoming,type:0
+msgid "Promissory note"
+msgstr "سفته"
+
+#. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_check__purpose
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__purpose
 msgid "Purpose"
-msgstr ""
+msgstr "کاربری"
 
 #. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_check__reason
 msgid "Reason"
 msgstr "بابت"
+
+#. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__received_date
+msgid "Receive Date"
+msgstr "تاریخ دریافت"
 
 #. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_checkbook__select_count
@@ -270,13 +442,29 @@ msgstr "شماره سری"
 #. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_check__state
 #: model:ir.model.fields,field_description:treasury.field_treasury_checkbook__state
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__state
 msgid "State"
-msgstr "استان"
+msgstr "وضعیت"
+
+#. module: treasury
+#: selection:treasury.incoming,state:0
+msgid "Sued"
+msgstr "شکایت‌شده"
 
 #. module: treasury
 #: model:ir.model.fields,help:treasury.field_treasury_check__currency_id
 msgid "The currency used to enter statement"
 msgstr "ارز مورد استفاده برای ورود گردش حساب"
+
+#. module: treasury
+#: selection:treasury.incoming,state:0
+msgid "Transferred"
+msgstr "منتقل‌شده"
+
+#. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__transferred_to
+msgid "Transferred To"
+msgstr "منتقل‌شده به"
 
 #. module: treasury
 #: model:ir.module.category,name:treasury.module_category_treasury
@@ -299,39 +487,161 @@ msgid "Treasury Checkbook"
 msgstr "دسته‌چک"
 
 #. module: treasury
+#: model:ir.ui.menu,name:treasury.treasury_configuration_menu
+msgid "Treasury Configuration"
+msgstr "پیکربندی"
+
+#. module: treasury
+#: model:ir.actions.act_window,name:treasury.treasury_incoming_action_view_tree
+#: model:ir.model,name:treasury.model_treasury_incoming
+msgid "Treasury Incoming"
+msgstr "اسناد و اوراق دریافتی"
+
+#. module: treasury
+#: model:ir.ui.menu,name:treasury.treasury_payment_menu
+msgid "Treasury Payment"
+msgstr "پرداخت"
+
+#. module: treasury
+#: model:ir.ui.menu,name:treasury.treasury_receive_menu
+msgid "Treasury Receive"
+msgstr "دریافت"
+
+#. module: treasury
+#: model:ir.ui.menu,name:treasury.treasury_incoming_menu
+msgid "Treasury incoming"
+msgstr "اسناد دریافتی"
+
+#. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__type
+msgid "Type"
+msgstr "نوع"
+
+#. module: treasury
+#: selection:treasury.incoming,state:0
+msgid "Undeposited"
+msgstr "دریافت‌شده"
+
+#. module: treasury
+#: selection:treasury.incoming,due_state:0
+msgid "Undue"
+msgstr "سررسید نشده"
+
+#. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_check__message_unread
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__message_unread
+msgid "Unread Messages"
+msgstr "پیام های خوانده‌نشده"
+
+#. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_check__message_unread_counter
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__message_unread_counter
+msgid "Unread Messages Counter"
+msgstr "شمارنده پیام‌های خوانده‌نشده"
+
+#. module: treasury
 #: model:res.groups,name:treasury.group_treasury_user
 msgid "User"
 msgstr "کاربر"
 
 #. module: treasury
+#: model:ir.model.fields,field_description:treasury.field_treasury_check__website_message_ids
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__website_message_ids
+msgid "Website Messages"
+msgstr "پیام‌های وب‌سایت"
+
+#. module: treasury
+#: model:ir.model.fields,help:treasury.field_treasury_check__website_message_ids
+#: model:ir.model.fields,help:treasury.field_treasury_incoming__website_message_ids
+msgid "Website communication history"
+msgstr "تاریخچه ارتباط با وبسایت"
+
+#. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_checkbook__active
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__active
 msgid "active"
-msgstr ""
+msgstr "فعال"
+
+#. module: treasury
+#: model_terms:ir.ui.view,arch_db:treasury.treasury_incoming_view_form
+msgid "bounce"
+msgstr "برگشت"
+
+#. module: treasury
+#: model_terms:ir.ui.view,arch_db:treasury.treasury_incoming_view_form
+msgid "cancel"
+msgstr "ابطال"
 
 #. module: treasury
 #: model_terms:ir.ui.view,arch_db:treasury.treasury_checkbook_view_form
 msgid "cancel all"
-msgstr ""
+msgstr "ابطال همه"
 
 #. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_check__company_id
 #: model:ir.model.fields,field_description:treasury.field_treasury_checkbook__company_id
-msgid "company id"
-msgstr ""
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__company_id
+msgid "company"
+msgstr "شرکت"
 
 #. module: treasury
-#: code:addons/treasury/models/treasury.py:108
+#: model:ir.model.fields,field_description:treasury.field_treasury_incoming__currency_id
+msgid "currency_id"
+msgstr "شناسه ارز"
+
+#. module: treasury
+#: model_terms:ir.ui.view,arch_db:treasury.treasury_check_view_form
+msgid "deliver"
+msgstr "تحویل"
+
+#. module: treasury
+#: code:addons/treasury/models/treasury_check.py:21
 #, python-format
 msgid "for"
 msgstr "بابت"
 
 #. module: treasury
+#: selection:treasury.incoming,state:0
+msgid "in bank"
+msgstr "در بانک"
+
+#. module: treasury
 #: model:ir.model.fields,field_description:treasury.field_treasury_checkbook__next_check
 msgid "next check No."
-msgstr ""
+msgstr "شماره چک بعدی"
+
+#. module: treasury
+#: selection:treasury.incoming,due_state:0
+msgid "overdue"
+msgstr "سررسید گذشته"
 
 #. module: treasury
 #: model_terms:ir.ui.view,arch_db:treasury.treasury_check_view_form
 msgid "print"
-msgstr ""
+msgstr "چاپ"
+
+#. module: treasury
+#: model_terms:ir.ui.view,arch_db:treasury.treasury_incoming_view_form
+msgid "resend to bank"
+msgstr "ارسال مجدد به بانک"
+
+#. module: treasury
+#: model_terms:ir.ui.view,arch_db:treasury.treasury_incoming_view_form
+msgid "return"
+msgstr "عودت"
+
+#. module: treasury
+#: selection:treasury.incoming,state:0
+msgid "returned"
+msgstr "عودت‌شده"
+
+#. module: treasury
+#: model_terms:ir.ui.view,arch_db:treasury.treasury_incoming_view_form
+msgid "send to bank"
+msgstr "ارسال به بانک"
+
+#. module: treasury
+#: model_terms:ir.ui.view,arch_db:treasury.treasury_incoming_view_form
+msgid "sue"
+msgstr "شکایت"
 
